--- a/nodejs-auth-server/package.json
+++ b/nodejs-auth-server/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.16.3",
+    "body-parser": "^1.20.1",
+    "json-server": "^0.17.1",
     "jsonwebtoken": "^8.5.1"
   }
 }
